# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint_flake8.yml
brain_games/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  game_logic.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
