[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "short mathematics mini games"
authors = ["elena <lenok.ok.lol@gmail.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
]
repository = "https://github.com/alena-yudzina/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"
